decided against like comments for now because  or UI and lack of users issues. Will figure out wiht tihngs like local storage. In the meantime, got the date on the comments list to appear as if they are its own column without the comment text wrapping under it.

--- a/src/app/blog-post/blog-post.component.scss
+++ b/src/app/blog-post/blog-post.component.scss
@@ -4,7 +4,16 @@ mat-form-field {
     margin-right: .5rem;
 }
 
-.comment-date {
-    margin-bottom: 0;
-    display: inline-block;
+.comment {
+    display: flex;
+    flex-direction: row;
+    .date {
+        margin-bottom: 0;
+        display: inline-block;
+        flex:0 0 auto;
+        margin-right: .3rem;
+    }
+    // .icons {
+
+    // }
 }
